--- a/player_jxavier/CMakeLists.txt
+++ b/player_jxavier/CMakeLists.txt
@@ -10,11 +10,16 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf
   rwsfi2016_libs
+  pcl_ros
 )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
+find_package(PCL 1.2 REQUIRED)
+include_directories(${PCL_INCLUDE_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
